# tmcell_cli

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py
app/core/: paths.py  router.py  serializers.py  utils.py
app/logs/: logger.py
