[project]
name = "auto-tmcell"
version = "0.1.0"
description = ""
authors = [
    {name = "neharix",email = "azatjurjenov24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faststream (>=0.5.43,<0.6.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (<4.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "inquirerpy (<=0.3.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "sustech"
url = "https://mirrors.sustech.edu.cn/pypi/web/simple"
priority = "primary"

